simpla/design/css/style.css
/* ... */
#pagination a.selected:hover,
#pagination a.selected {
	background-color: #18a5ff;
	color: #ffffff;
	border-color: #008fe9;
}

#pagination a:hover {
	background-color: #f8f8f8;
}

#pagination a.drop_active {
	background-color: #c4ffb2;
	border: 1px solid #3cff00;
	color: #000000;
}

#pagination a.drop_hover {
	background-color: #4eee00;
	border: 1px solid #4eee00;
	color: #ffffff;
}

/* @end */

/* @group Свернуть - развернуть варианты */
div#expand {
	margin-bottom: 10px;
	display: none;
	float: right;
}

div#expand a {
	color: #008fe9;
	border-bottom-color: #008fe9;
}

/* @end */

/* @group Ссылки для сортировки */
div#sort_links {
	margin-bottom: 10px;
	float: right;
}

div#sort_links a {
	color: #008fe9;
	border-bottom-color: #008fe9;
}

/* @end */

/* @group Список */
#main_list.brands {
	width: 600px;
}

#main_list.categories {
	width: 600px;
}

#main_list.features {
	width: 600px;
}

#list {
	min-width: 200px;
	border-bottom: 1px solid #d0d0d0;
	clear: both;
}

#list #list {
	border-bottom: none;
}

#list .clear {
	clear: both;
}

#list .row {
	border-top: 1px solid #d0d0d0;
	background-color: #f3f3f3;
	border-collapse: collapse;
}

#list .tree_row:hover {
	background-color: #f9f9f9;
}

#list .even {
	background-color: #ebebeb;
}

#list .cell {
	vertical-align: top;
	padding: 10px 0 7px;
	float: left;
}

#list .move {
	vertical-align: center;
	width: 20px;
	padding-right: 0px;
	padding-left: 5px;
}

#list .move div {
	height: 16px;
	width: 20px;
	margin-top: 2px;
}

#list .checkbox {
	width: 20px;
	padding-right: 0px;
	padding-left: 5px;
}

#list .image {
	width: 35px;
	padding-bottom: 3px;
	padding-top: 5px;
	padding-right: 0px;
}

#list .image a {
	width: 35px;
	display: block;
}

#list .image img {
	margin-left: 5px;
	border: 1px solid #d3d3d3;
}

#list .name {
	font-size: 12px;
	padding-left: 10px;
	max-width: 600px;
}

#list.related_products .name {
	width: 320px;
}

#list .product_name {
	width: 505px;
	*position: relative;
}

#list .product_name a {
	*position: absolute; /*Scrum*/
	*left: 0; /*Scrum*/
}

#list .brand_nameqwe {
	width: 300px;
}

#list .page_name {
	width: 300px;
}

#list .user_name {
	width: 220px;
}

#list .user_email {
	width: 200px;
}

#list .user_email a {
	color: #707070;
}

#list .user_group {
	width: 200px;
	text-align: right;
	color: #707070;
}

#list.groups {
	width: 500px;
}

#list .group_name {
	width: 250px;
	padding-left: 10px;
}

#list .group_discount {
	width: 90px;
	text-align: right;
}

#list .order_name {
	width: 350px;
}

#list .order_date {
	width: 120px;
	color: #505050;
	font-size: 12px;
	padding-left: 10px;
}

#list .green {
	background-color: #dcffd0;
}

#list .variants div.expand_variant {
	float: right;
	text-align: left;
	width: 167px;
}

.expand_variant a {
	*position: static !important; /*Scrum*/
}

#list .variants a.expand_variant, #list .product_name a.roll_up_variant {
	color: #008fe9 !important;
	border-bottom-color: #008fe9 !important;
	font-size: 11px !important;
}

#list .variants {
	float: right;
	margin-top: -3px;
	font-size: 12px;
	color: #707070;
	padding-left: 10px;
	text-align: right;
}

#list .variants ul li {
	text-align: right;
	margin-bottom: 2px;
	overflow: hidden;
}

#list .variants ul i {
	font-style: normal;
	padding-bottom: 2px;
	overflow: hidden;
}

#list .variants ul .price {
	font-size: 14px;
	width: 80px;
	text-align: right;
	margin-right: 3px;
}

#list .variants ul .compare_price {
	color: #dd0063;
}

#list .variants ul .stock {
	font-size: 14px;
	width: 40px;
	text-align: right;
	color: #4e4e4e;
	margin-right: 3px;
}

#list .icons {
	float: right;
	text-align: right;
	padding-right: 10px;
	padding-left: 10px;
	white-space: nowrap;
	zoom: 1;
}

#list .invisible .name {
	color: #909090;
}

#list .invisible .name a {
	color: #909090;
	border-bottom-color: #909090;
}

#list .row .name {
	color: #000000;
}

#list .row .name a {
	color: #000000;
	border-bottom-color: #000000;
}

#list .coupon_name {
	width: 220px;
}

#list .coupon_details {
	width: 200px;
}

#list .coupon_discount {
	width: 180px;
}

#list .coupon_details .detail,
#list .coupon_discount .detail {
	color: #707070;
	font-size: 11px;
}

span.order_label_big {
	float: left;
	display: block;
	padding: 0px;
	width: 32px;
	height: 32px;
	margin-right: 5px;
	background-color: #e0e0e0;
	background-image: url(../images/label_big.png);
}

span.order_label {
	float: left;
	display: block;
	padding: 0px;
	width: 16px;
	height: 16px;
	margin-right: 5px;
	background-color: #e0e0e0;
	background-image: url(../images/label.png);
}

.order_name span.order_label {
	margin-right: 0px;
	float: right;
}

@media only screen and (-webkit-min-device-pixel-ratio: 2.0), only screen and (min--moz-device-pixel-ratio: 2.0), only screen and (-o-min-device-pixel-ratio: 200/100), only screen and (min-device-pixel-ratio: 2.0) {
	span.order_label {
		background-image: url('../images/label@2x.png');
		-webkit-background-size: 64px 16px;
		-moz-background-size: 64px 16px;
		background-size: 64px 16px;
	}
}

#list span.order_label {
	background-position: -16px;
}

#list .even span.order_label {
	background-position: -32px;
}

#list .green span.order_label {
	background-position: -48px;
}

.icons a {
	padding: 8px;
	margin: 2px;
	*display: inline;
	zoom: 1;
	background-position: center center;
	background-repeat: no-repeat;

}

.icons a.enable {
	background-image: url(../images/lightbulb.png);
}

.invisible > .icons a.enable, .invisible > .tree_row .icons a.enable {
	background-image: url(../images/lightbulb_off.png);
}

.icons a.preview {
	background-image: url(../images/monitor.png);
}

.icons a.delete {
	background-image: url(../images/delete.png);
}

.icons a.print {
	background-image: url(../images/printer_small.png);
}

.icons a.featured {
	background-image: url(../images/star_gray.png);
}

.icons a.in_filter {
	background-image: url(../images/filter_gray.png);
}

.in_filter .icons a.in_filter {
	background-image: url(../images/filter.png);
}
/* ... */

